Fix build for Qt by using ASSERT_UNUSED in DFGSpeculativeJIT https://bugs.webkit.org/show_bug.cgi?id=86902

Reviewed by Andreas Kling.

* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::silentSavePlanForGPR):

Canonical link: https://commits.webkit.org/104528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117629 268f45cc-cd09-0410-ab3c-d52691b4dbfc